--- a/LeaderBoard.csproj
+++ b/LeaderBoard.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,12 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="MemoryPack" Version="1.9.16" />
-    <PackageReference Include="xunit" Version="2.5.1" />
   </ItemGroup>
 
 </Project>
