--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-.vs/*.*
-*.vs/*.*
-bin/*.*
-obj/*.*
-*.v2
-*.vsidx
-*.v2
-*.vsidx
-*.vsidx
-.vs/LeaderBoard/v17/.suo
-*.bin
-*.bin
-*.dll
-*.pdb
-*.cache
-*.v2
-.vs/LeaderBoard/v17/.futdcache.v2
+.vs/
+bin/
+obj/
+*.usr
